--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-# Node modules
-backend/node_modules/
-frontend/node_modules/
-
-# Build output
-backend/dist/
-backend/build/
-frontend/dist/
-frontend/build/
-frontend/.next/
-
-# Environment variables
-backend/.env
-
 # Logs
+logs
 *.log
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Prisma
-backend/prisma/migrations/
-
-# Others
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# VSCode
-.vscode/ 
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
