feat(`backend`): Implement user authentication and authorization with JWT, create user and menu item management routes, and set up Prisma for database interactions

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,10 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# Prisma
+/src/generated/
+prisma/migrations/dev/
+
+# Build output
+/dist/
+/build/
 
 # Editor directories and files
 .vscode/*
