feat(`backend/package.json`): Add new scripts for menu seeding, testing, and database migration to enhance development workflow

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed:menu": "tsx scripts/seedMenu.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node scripts/prisma-migrate.js dev"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
