--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-i18next": "^15.5.1",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
@@ -71,6 +72,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
+    "@types/react-i18next": "^8.1.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
