--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.12.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
@@ -72,7 +73,6 @@
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
-    "@types/react-i18next": "^8.1.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
