--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,20 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
   "builds": [
     {
-      "src": "*.js",
+      "src": "dist/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "dist/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "dist/index.js"
     }
   ]
 }
