--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,28 @@
-# Server Configuration
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+# Use transaction pooler for serverless connections (good for serverless functions)
+
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://[your_password]@host:6543/database?pgbouncer=true"
+
+# Direct connection to the database. Used for migrations
+DIRECT_URL="postgresql://[your_password]@host:5432/database"
+
+# Authentication
+JWT_SECRET="your_jwt_secret_here"
+
+JWT_EXPIRES_IN="7d"
+
+# Server Config
 PORT=3000
-# Frontend URL for CORS
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL="http://localhost:8080"
+
+# Cors
+CORS_ORIGIN="http://localhost:8080"
 
 # Database Configuration
 # DB_HOST=localhost
