feat(`vercel.json`): Add routing configuration to Vercel setup for handling requests

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,5 +4,11 @@
       "src": "src/index.ts",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/index.ts"
+    }
   ]
 }
