--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,13 @@
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },"scripts": {
-    "dev": "nodemon --exec tsx src/index.ts",
+    "dev": "prisma generate && nodemon --exec tsx src/index.ts",
     "build": "prisma generate && tsc -p tsconfig.production.json",
     "start": "node dist/index.js",
     "seed:menu": "tsx scripts/seedMenu.ts",
     "seed:admin": "tsx scripts/seedAdmin.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node scripts/prisma-migrate.js dev",
-    "vercel-build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
@@ -23,13 +22,13 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
-    "zod": "^3.24.4"
+    "zod": "^3.25.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.15.19",
     "nodemon": "^3.1.10",
     "prisma": "^6.8.2",
     "tsx": "^4.19.4",
