--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "seed:admin": "tsx scripts/seedAdmin.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "node scripts/prisma-migrate.js dev",
-    "vercel-build": "node dist/index.js"
+    "vercel-build": "node src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
