--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
-  },
-  "scripts": {
+  },"scripts": {
     "dev": "prisma generate && nodemon --exec tsx src/index.ts",
     "build": "prisma generate && tsc -p tsconfig.production.json",
     "start": "node dist/index.js",
@@ -34,19 +33,5 @@
     "prisma": "^6.8.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
-  },
-  "vercel": {
-    "builds": [
-      {
-        "src": "src/index.ts",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "src/index.ts"
-      }
-    ]
   }
 }
