chore(`frontend\.env`): Update `.env.example` to include additional example frontend environment variables for Supabase integration

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,5 @@
+# All frontend environment variables must be prefixed with VITE_ to be accessible in the code
+
 VITE_API_URL="http://localhost:3000"
+VITE_SUPABASE_URL="EXAMPLE_SUPABASE_URL"
+VITE_SUPABASE_ANON_KEY="EXAMPLE_SUPABASE_ANON_KEY"
