--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.1",
   "type": "module",
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx scripts/seedMenu.ts && tsx scripts/seedAdmin.js"
   },"scripts": {
     "dev": "prisma generate && nodemon --exec tsx src/index.ts",
     "build": "prisma generate && tsc -p tsconfig.production.json",
     "start": "node dist/index.js",
+    "seed:all": "tsx scripts/seedMenu.ts && tsx scripts/seedAdmin.js",
     "seed:menu": "tsx scripts/seedMenu.ts",
     "seed:admin": "tsx scripts/seedAdmin.js",
     "test": "echo \"Error: no test specified\" && exit 1",
