feat(`package.json`, `seedMenu.ts`, `multiselect-dropdown.tsx`): Update seed scripts, enhance menu item options with multi-select capabilities, and improve dropdown display for selected items.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "prisma": {
     "seed": "tsx scripts/seedMenu.ts && tsx scripts/seedAdmin.js"
-  },"scripts": {
+  },
+  "scripts": {
     "dev": "prisma generate && nodemon --exec tsx src/index.ts",
     "build": "prisma generate && tsc -p tsconfig.production.json",
     "start": "node dist/index.js",
