--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && npm run dev",
-    "build": "npm run build:frontend && npm run postbuild",
+    "build": "concurrently \"npm run build:frontend\" \"npm run build:backend\"",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "postbuild": "mkdir -p api && cp -R backend/dist/* api/",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "start:frontend": "cd frontend && npm run preview",
     "start:backend": "cd backend && npm run start"
