--- a/backend/package.json
+++ b/backend/package.json
@@ -24,15 +24,15 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1",
-    "zod": "^3.25.7"
+    "zod": "^3.25.20",
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.15.19",
+    "@types/node": "^22.15.21",
     "nodemon": "^3.1.10",
-    "prisma": "^6.8.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
