test(`package.json`): Update scripts to include postinstall for prisma migrations and streamline dev and build commands.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
     "seed": "tsx scripts/seedMenu.ts && tsx scripts/seedAdmin.js"
   },
   "scripts": {
-    "dev": "prisma generate && nodemon --exec tsx src/index.ts",
-    "build": "prisma generate && tsc -p tsconfig.production.json",
+    "postinstall": "prisma generate && prisma migrate deploy",
+    "dev": "nodemon --exec tsx src/index.ts",
+    "build": "tsc -p tsconfig.production.json",
     "start": "node dist/index.js",
     "seed:all": "tsx scripts/seedMenu.ts && tsx scripts/seedAdmin.js",
     "seed:menu": "tsx scripts/seedMenu.ts",
