--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://vietbaguette-backend.vercel.app/api/:path*"
+      "destination": "https://vietbaguette.onrender.com/api/:path*"
     },
     {
       "source": "/(.*)",
